# utf8-scanner-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cspell.json
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
cmake/: Config.cmake.in
examples/: CMakeLists.txt  example.cc
tests/: utf8_scanner_test.cc  utf8_utils_test.cc
utf8_scanner/: utf8_scanner.h
utf8_utils/: utf8_utils.h
